syntax = "proto3";
package util;

message Date {
    int32 year = 1;
    int32 month = 2;
    int32 day = 3;
}


// Oss直传Token
message OssToken {
    // oss access key id
    string access_key_id = 1;
    // 上传参数
    string policy = 2;
    // 签名
    string signature = 3;
    // 直传地址
    string host = 4;
    // 回调参数
    string callback_body = 5;
}
